# mkdocstrings-R

./: .gitignore  LICENSE  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
src/: python_google_showcase.py
src/mkdocstrings_handlers/R/: __init__.py
src/mkdocstrings_handlers/R/_internal/: handler.py
src/mkdocstrings_handlers/R/templates/material/: function.html.jinja  style.css  test.html.jinja
tests/R/: main.R
