[project]
name = "mkdocstrings-r"
version = "0.1.0"
authors = [
  { name="kay-mw" },
]
description = "Mkdocstrings handler for R."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mkdocstrings>=1.0.3",
    "rpy2>=3.6.4",
]

[build-system]
requires = ["uv_build>=0.10.2, <0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["mkdocstrings_handlers.R"]


[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
]
