[project]
name = "mkdocstrings-r"
version = "v0.1.0"
authors = [
  { name="kay-mw" },
]
description = "Mkdocstrings handler for R."
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
  "Programming Language :: Python :: 3",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mkdocstrings>=0.28.3",
    "rpy2>=3.5.17,<3.6", # 3.6+ namespace version is broken on Linux
]

[build-system]
requires = ["uv_build>=0.10.2, <0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["mkdocstrings_handlers.R"]


[dependency-groups]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python"
]
